shesmu-server/src/test/resources/bad/cycle2.shesmu
Input gsi_std;

Define standard_execution()
  Call broken();

Define broken()
  Call standard_execution();
